--- a/templates/student.html
+++ b/templates/student.html
@@ -42,6 +42,9 @@
 				</div>
 			</div>
 		</header>
+		<div class="reading-width">
+			If you need any help, join <a href="https://webirc.runxiyu.org/kiwiirc/#chat">#chat</a>.
+		</div>
 		<div class="reading-width" id="wip-notice">
 			<p>
 			This site is still a work in progress and may contain bugs! Please contact <a href="mailto:sj-cca@ykpaoschool.cn">the CCA department</a> for CCA selection issues or <a href="mailto:s22537@stu.ykpaoschool.cn">Runxi Yu</a> for website issues.
