--- a/templates/student.html
+++ b/templates/student.html
@@ -42,8 +42,8 @@
 				</div>
 			</div>
 		</header>
-		<div class="reading-width" style="margin-top: 1rem;">
-			If you need any help, join <a href="https://webirc.runxiyu.org/kiwiirc/#chat" target="_blank" rel="noopener noreferrer">the support chat</a>.
+		<div class="reading-width" style="margin-top: 1rem; font-weight: bold;">
+			If you need any help, join <a href="https://webirc.runxiyu.org/kiwiirc/#cca" target="_blank" rel="noopener noreferrer">the support chat</a>.
 		</div>
 		<div class="reading-width" id="wip-notice">
 			<p>
